fix unreadable text in synapse

--- a/common/gtk-3.0/3.16/_applications.scss
+++ b/common/gtk-3.0/3.16/_applications.scss
@@ -447,6 +447,11 @@ TotemGrilo.vertical GdMainView.frame {
 }
 
 //
+// Synapse
+//
+SynapseGuiViewDefault *:selected { background-color: $selected_bg_color; }
+
+//
 // Fallback Mode/Budgie Panel
 //
 .gnome-panel-menu-bar,
