--- a/common/gtk-3.0/3.16/gtk-contained.css
+++ b/common/gtk-3.0/3.16/gtk-contained.css
@@ -2590,6 +2590,9 @@ EphyWindow .floating-bar {
 TotemGrilo.vertical GdMainView.frame {
   border-width: 0; }
 
+SynapseGuiViewDefault *:selected {
+  background-color: #5294E2; }
+
 .gnome-panel-menu-bar,
 PanelApplet > GtkMenuBar.menubar,
 PanelToplevel,
